2010-09-15 Sasa Bojanic <sasaboy@together.at>
   # twe-includes.xlsx updated
   # batik-xxx.jar files removed from the project (using batik.jar comming with FOP) - build scripts modified

2010-09-13 Sasa Bojanic <sasaboy@together.at>
   # Added new XPDL samples

2010-09-10 Sasa Bojanic <sasaboy@together.at>
   # fix: issues with defining Record and Union type variables
   
2010-09-09 Sasa Bojanic <sasaboy@together.at>
   # twe-doc-current.pdf is now not packed in the zip, but just ends up into community folder like that
   # program group entry for API docu removed
   # updated docbook docu

2010-09-08 Sasa Bojanic <sasaboy@together.at>
   # twe-doc-current.html removed from docu
   # docu in documentation folder of the distribution is now unpacked

2010-09-07 Sasa Bojanic <sasaboy@together.at>
   # fixed docbook docu and build scripts to solve picture and table sizing issues in PDFs
   # added TAS dependency build (the zip file which is same as a normal but with a twe.zip name)

2010-09-03 Sasa Bojanic <sasaboy@together.at>
   # added copyright and GPL V3 comment at top of every source file where missing (including *.xml, *.properties, *.xpdl... files)
   # docbook documentation twe.xml renamed to twe-doc.xml
   # XPDL sample files opened and saved with the newest version of editor
   # Standardized make/configure targets
   # Project license now goes to licenses folder, together with other licenses
   # Release notes merged into the single docbook documentation file
   # documentation and screenshot zip file now also goes into community folder of the distribution
   # documentation zip now also contains twe-doc-current.pdf and twe-doc-current.html files
   # BuildID.txt file added to the binary output and to the distribution's internal folder - it specifies the time when the release was built
   # source distribution does not contain build.properties file anymore
   # source distribution does not contain unnecessary temporary files anymore