@@ -1,4 +1,7 @@
 2010-09-15 Sasa Bojanic <sasaboy@together.at>
+   # removed -optimized parameter for configure script
+   # improved configure scripts for windows and linux
+   # added section into documentation about all possible configure/make targets
    # twe-includes.xlsx updated
    # batik-xxx.jar files removed from the project (using batik.jar comming with FOP) - build scripts modified
 
